--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1> lets Start Learning WebDevelopment</h1>
-    <form Action="/HTMLCrashCourse.html">
+    <form Action="webDev/HTMLCrashCourse.html">
         <input type="submit" value="Web Development Tutorial">
         </form>
 </body>
